--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -161,24 +161,40 @@ code {
   }
 }
 
+@media (min-width: 481px) and (max-width: 768px) {
+  .Menu__wrapper {
+    width: 300px;
+    height: 192px;
+    position: absolute;
+    top: 51px;
+    right: 0;
+    overflow: hidden;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .Menu__wrapper {
+    width: 100%;
+    position: absolute;
+    right: 0;
+    top: 39px;
+  }
+}
+
 .Menu__container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-transition: all 0.2s ease-out;
-  transition: all 0.2s ease-out;
 }
 
 @media (min-width: 481px) and (max-width: 768px) {
   .Menu__container {
     position: absolute;
-    width: 300px;
+    width: 100%;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    right: 0;
-    top: 51px;
     background-color: rgba(0, 0, 0, 0.7);
   }
 }
@@ -191,14 +207,12 @@ code {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    right: 0;
-    top: 39px;
     background-color: rgba(0, 0, 0, 0.7);
   }
 }
 
 .Menu__container--hidden {
-  right: -100%;
+  right: -300px;
 }
 
 .Menu__link {
